# oak-mod-manager

./: .clang-tidy  .clangd  .cruft.json  .gitignore  .gitmodules  .typos.toml  CMakeLists.txt  CMakePresets.json  Makefile  Readme.md  changelog.md  linters.txt  manager_pyproject.toml  pick_release_name.py  prepare_release.py  pyproject.toml
.github/workflows/: build.yml
sdk_mods/: .gitignore  __main__.py
sdk_mods/bl3_mod_menu/: __init__.py  dialog_box.py  keybinds.py  mod.py  options_callbacks.py  options_setup.py  outer_menu.py
sdk_mods/bl3_mod_menu/native/: dialog_box.cpp  options_getters.cpp  options_getters.pyi  options_transition.cpp  outer_menu.cpp
sdk_mods/console_mod_menu/: __init__.py  draw.py  key_matching.py  menu_loop.py  option_formatting.py  write.py
sdk_mods/console_mod_menu/screens/: __init__.py  confirm.py  home.py  keybind.py  mod.py  option.py
sdk_mods/mod_menu/: __init__.py  create_option_description_item.py  keybinds.py  menu.py  menu_keybinds.py  mod.py  mod_list.py  native_keybinds.cpp  native_menu.cpp  native_menu.pyi
sdk_mods/mod_menu/native/: dialog_box.pyi  options.cpp  options.pyi  options_getters.cpp  options_getters.pyi  options_menu.cpp  options_menu.pyi  options_setup.cpp  options_setup.pyi  options_transition.cpp  options_transition.pyi  outer_menu.cpp  outer_menu.pyi
sdk_mods/mods_base/: __init__.py  command.py  hook.py  keybinds.py  menu_keybinds.py  mod.py  mod_factory.py  mod_list.py  options.py  raw_keybinds.py  settings.py
sdk_mods/mods_base/native/: keybinds.cpp  keybinds.pyi
src/: __main__.py
src/bl3_mod_menu/: __init__.py  dialog_box.py  keybinds.py  options_callbacks.py  options_setup.py  outer_menu.py
src/bl3_mod_menu/native/: dialog_box.cpp  dialog_box.pyi  options_getters.cpp  options_getters.pyi  options_setup.cpp  options_setup.pyi  options_transition.cpp  options_transition.pyi  outer_menu.cpp  outer_menu.pyi
src/console_mod_menu/: __init__.py  draw.py  key_matching.py  option_formatting.py
src/console_mod_menu/screens/: __init__.py  home.py  mod.py  option.py
src/keybinds/: __init__.py  keybinds.cpp  keybinds.pyi  raw_keybinds.py
src/mods_base/: .gitignore  __init__.py  command.py  dot_sdkmod.py  hook.py  keybinds.py  mod.py  mod_factory.py  mod_list.py  options.py  pyproject.toml  raw_keybinds.py  settings.py
src/ui_utils/: __init__.py  hud_message.py  tutorial_message.py
