[project]
name = "mods_base"
version = "1.1"
authors = [{ name = "bl-sdk" }]
description = "The SDK itself."

[tool.sdkmod]
name = "Python SDK"
# RELEASE_SCRIPT_REPLACE_ME_WITH_DISPLAY_VERSION
license = {name = "LGPL3", url = "https://choosealicense.com/licenses/lgpl-3.0/" }
download = "https://github.com/bl-sdk/oak-mod-manager/releases/latest"
